--- a/templates/2008/upload.twig
+++ b/templates/2008/upload.twig
@@ -555,7 +555,7 @@ function moreless_options() {
             <tbody>
               <tr>
                   <td style="white-space: nowrap;" width="" align="right"><span style="font-size: 12px;font-weight:bold;">File:</span></td>
-                <td><input type="file" id="fileToUpload" name="fileToUpload" accept="video/mpeg,video/x-ms-wmv,video/avi,video/quicktime,video/mp4"></td>
+                <td><input type="file" id="fileToUpload" name="fileToUpload"></td>
               </tr>
                <tr>
      <td style="white-space: nowrap;" width="" align="right"><span style="font-size: 12px;font-weight:bold;">Broadcast Options (UNIMPLEMENTED):</span></td>
