--- a/assets/2008/messages.css
+++ b/assets/2008/messages.css
@@ -25,17 +25,17 @@
     float:left;
 }
 .img-action-button-cap-left {
-    background:transparent url(/img/master-vfl47921.gif) no-repeat scroll -162px -37px;
+    background:transparent url(/assets/2008/master-vfl42001.png) no-repeat scroll -162px -37px;
     height:25px;
     width:5px;
 }
 .img-action-button-cap-right {
-    background:transparent url(/img/master-vfl47921.gif) no-repeat scroll -167px -37px;
+    background:transparent url(/assets/2008/master-vfl42001.png) no-repeat scroll -167px -37px;
     height:25px;
     width:5px;
 }
 .action-button .content {
-    background: transparent url(/img/master-vfl47921.gif) repeat-x scroll -310px -377px;
+    background: transparent url(/assets/2008/master-vfl42001.png) repeat-x scroll -310px -377px;
     color: #0033CC;
     float: left;
     height: 20px;
