--- a/templates/2008/writeProfileComment.twig
+++ b/templates/2008/writeProfileComment.twig
@@ -11,7 +11,7 @@
         <td><textarea maxlength="500" name="comment" cols="66" rows="6"></textarea></td>
     </tr>
     <tr>
-        <td><input type="submit" name="post_comment" value="Post Comment"> <a href="/user.php?user={{ userpagedata.name }}"><button type="button">Cancel</button></a></td>
+        <td><input type="submit" name="post_comment" value="Post Comment"> <a href="/user.php?name={{ userpagedata.name }}"><button type="button">Cancel</button></a></td>
     </tr>
 </tbody></table>
 </form> 
