fix related videos

--- a/templates/2008/my_profile.twig
+++ b/templates/2008/my_profile.twig
@@ -38,7 +38,7 @@
         <div class="clear"></div>
 </div>
 <br>
-<div style="font-size:14px;font-weight:bold;color:#666666;margin: 1px 0 10px"><img src="/img/icon/pencil.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Info"> Image Upload</div>
+<div style="font-size:14px;font-weight:bold;color:#666666;margin: 1px 0 10px"><img src="/assets/2008/pencil.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Info"> Image Upload</div>
 <table width="62%" cellspacing="0" cellpadding="5" border="0">
     <tbody><tr>
             <td align="right"><span style="font-weight:bold">Background Image:</span></td>
@@ -54,7 +54,7 @@
                     </tr>
 </tbody></table>
 <form action="/my_profile.php" method="post">
-    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 1px 0 10px"><img src="/img/icon/help.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Info"> Personal Info</div>
+    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 1px 0 10px"><img src="/assets/2008/help.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Info"> Personal Info</div>
     <table width="62%" cellspacing="0" cellpadding="5" border="0">
         <tbody><tr>
             <td width="110px" align="right"><span style="font-weight:bold">Name:</span></td>
@@ -527,7 +527,7 @@
             </td>
         </tr>
     </tbody></table>
-    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 15px 0 10px"><img src="/img/icon/pencil.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Pencil"> Interests</div>
+    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 15px 0 10px"><img src="/assets/2008/pencil.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Pencil"> Interests</div>
     <table width="60%" cellspacing="0" cellpadding="5" border="0">
         <tbody><tr>
             <td width="110px" align="right"><span style="font-weight:bold">About Me:</span></td>
@@ -551,32 +551,16 @@
         </tr>
     </tbody></table>
 
-    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 15px 0 10px"><img src="/img/email.png" style="width:15px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Pencil"> E-Mail</div>
-    <table width="60%" cellspacing="0" cellpadding="5" border="0">
-        <tbody><tr>
-            <td width="110px" align="center"><input type="checkbox" name="e_messages" id="e_messages"></td>
-            <td><label for="e_messages">E-Mail me on Private Messages</label></td>
-        </tr>
-        <tr>
-            <td width="110px" align="center"><input type="checkbox" name="e_comments" id="e_comments"></td>
-            <td><label for="e_comments">E-Mail me on Video Comments</label></td>
-        </tr>
-        <tr>
-            <td width="110px" align="center"><input type="checkbox" name="e_highlights" id="e_highlights"></td>
-            <td><label for="e_highlights">E-Mail me on weekly Subscription Highlights</label></td>
-        </tr>
-    </tbody></table>
-
-    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 15px 0 10px"><img src="/img/painter.png" style="width:17px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Painter"> Channel Customization</div>
+    <div style="font-size:14px;font-weight:bold;color:#666666;margin: 15px 0 10px"><img src="/assets/2008/painter.png" style="width:17px;vertical-align:bottom;margin:0 2px 0 0;position:relative;bottom:1px" alt="Painter"> Channel Customization</div>
 <table width="60%" cellspacing="0" cellpadding="5" border="0">
         <tbody><tr>
             <td width="110px" align="right"><span style="font-weight:bold">Background:</span></td>
-            <td><input type="color" name="color_background" value="#0b0b0b"> </td>
+            <td><input type="color" name="color_background" value="#ffffff"> </td>
         </tr>
 
                <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Font Color:</span></td>
-            <td><input type="color" name="color_font" value="#0dff55"></td>
+            <td><input type="color" name="color_font" value="#222222"></td>
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Title Font Color:</span></td>
@@ -584,7 +568,7 @@
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Link Color:</span></td>
-            <td><input type="color" name="color_links" value="#779d2f"></td>
+            <td><input type="color" name="color_links" value="#0033cc"></td>
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Header Font Color:</span></td>
@@ -592,19 +576,19 @@
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Highlight Header:</span></td>
-            <td><input type="color" name="color_highlight_header" value="#56a95c"></td>
+            <td><input type="color" name="color_highlight_header" value="#3399cc"></td>
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Highlight Inside:</span></td>
-            <td><input type="color" name="color_highlight_inner" value="#103805"></td>
+            <td><input type="color" name="color_highlight_inner" value="#ecf4fb"></td>
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Regular Header:</span></td>
-            <td><input type="color" name="color_normal_header" value="#65cc33"></td>
+            <td><input type="color" name="color_normal_header" value="#3399cc"></td>
         </tr>
         <tr>
             <td width="110px" align="right"><span style="font-weight:bold">Regular Inside:</span></td>
-            <td><input type="color" name="color_normal_inner" value="#234e47"></td>
+            <td><input type="color" name="color_normal_inner" value="#ffffff"></td>
         </tr>
 
         <tr>
@@ -648,6 +632,5 @@
             <td></td>
             <td><input type="submit" name="save_profile" value="Save Changes"></td>
         </tr>
-    </tbody></table>
-</form>            </div>
+    </tbody></table></form>            </div>
 {% endblock %}
