--- a/templates/2008/login.twig
+++ b/templates/2008/login.twig
@@ -25,12 +25,12 @@
         margin-right:30px;
     }
     .img-action-button-cap-left {
-        background:transparent url(/assets/2008/master-vfl47921.gif) no-repeat scroll -162px -37px;
+        background:transparent url(/assets/2008/master-vfl42001.png) no-repeat scroll -162px -37px;
         height:25px;
         width:5px;
     }
     .img-action-button-cap-right {
-        background:transparent url(/assets/2008/master-vfl47921.gif) no-repeat scroll -167px -37px;
+        background:transparent url(/assets/2008/master-vfl42001.png) no-repeat scroll -167px -37px;
         height:25px;
         width:5px;
     }
@@ -38,7 +38,7 @@
         border:medium none;
     }
     .action-button .content {
-        background: transparent url(/assets/2008/master-vfl47921.gif) repeat-x scroll -310px -377px;
+        background: transparent url(/assets/2008/master-vfl42001.png) repeat-x scroll -310px -377px;
         color: #0033CC;
         float: left;
         height: 20px;
