--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -58,7 +58,7 @@
             <div class="nav-item  " id="nav-item-community">
                 <div class="nav-tab">
                     <span class="leftcap"></span>
-                    <a class="content" href="/groups.php">Community</a>
+                    <a class="content" href="/forum/index.php">Community</a>
                     <span class="rightcap"></span>
                 </div>
             </div>
