fix stack assets

--- a/templates/2008/_layout-profile.twig
+++ b/templates/2008/_layout-profile.twig
@@ -325,7 +325,7 @@
 		}
 		.profile-box .box-body {
 			background: #FFFFFF;
-			color: #000000;
+			color: {{ customProfile.fontcolor }};
 			filter: Alpha(opacity=99);
 		}
 		.profile-box .box-bg[class] {
@@ -408,7 +408,7 @@
 		}
 		
 		.flaggingText {
-			color:  #000099;
+			color:  {{customProfile.fontColor}};
 			font-family: arial,helvetica,sans-serif;
 		}
 		
@@ -483,10 +483,10 @@
 			font-family: arial,helvetica,sans-serif;
 		}
 		.runtime, .facets, .vfacets {
-			color: #000000;
+			color: {{customProfile.fontColor}};
 		}
 		.title, .vtitle, .desc, .vdesc { 
-			color: #000000;
+			color: {{customProfile.fontColor}};
 		}
 		
 		
