--- a/templates/2008/inbox.twig
+++ b/templates/2008/inbox.twig
@@ -77,7 +77,7 @@
                                         <td></td>
                     <td colspan="1" valign="middle" align="center">
                         <a href="/profile.php?user=paris201"><img src="/u/av/paris201.jpg?15" class="avatar" alt="paris201" width="66" height="66"></a>				</td>
-                    <td colspan="2" valign="top">{{ notif }}<div class="messages_reply_section">
+                    <td colspan="2" valign="top">{{ notif | raw }}<div class="messages_reply_section">
 
                             <div class="irs_buttons">
                                 <div class="action-button">
