proper profiles again

--- a/templates/2008/_layout-profile.twig
+++ b/templates/2008/_layout-profile.twig
@@ -302,12 +302,12 @@
 			color: {{ customProfile.link }};
 		}
 		h1,h2,h3,h4,h5,h6 {
-			color: #000000;
+			color: {{ customProfile.fontcolor }};
 		}
 		
 		.profileTitleLinks {
 			font-family: arial,helvetica,sans-serif;
-			color: #000099;
+			color: {{ customProfile.link }};
 		}
 		
 		.highlightBox {
