--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -21,7 +21,7 @@
 		
 
 		<span class="util-item"><span id="iconMail" class="noMail"></span>(<a href="/my_messages.php">0</a>)</span>
-        <span class="util-item"><a href="/my_profile.php">Profile</a></span>
+        <span class="util-item"><a href="/my_profile.php">Account</a></span>
         <span class="util-item"><a href="/viewing_history.php">History</a></span>
         <span class="util-item"><a href="/help.php">Help</a></span>
                 <span class="util-item"><a href="/logout.php" class="loginBoxZ eLink" onclick="">Log Out</a></span>
