--- a/templates/sbnext-finalium/components/player.twig
+++ b/templates/sbnext-finalium/components/player.twig
@@ -5,7 +5,7 @@
                {{ __("This video is being processed. Try again later.") }}
             </div>
             {% else %}
-            <video style="aspect-ratio: 16 / 9;width: -moz-available;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
+            <video style="aspect-ratio: 16 / 9;width: 100%;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
 			<source src="./videos/{{ video.video_id }}.converted.mp4" type="video/mp4" />
 			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
 			</video>
