Flash Fucking Player

--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -13,7 +13,7 @@
     <body> 
         <div id="baseDiv" class=" date-20080710">
         <div id="masthead">
-                <a href="/" class="logo"><img border="0"></a>
+                <a href="/" class="logo"><img src="assets/2008/pixel.gif" border="0"></a>
                 <div class="user-info">
 	{% if log %}
 <div id="util-links" class="normal-utility-links">
