--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -40,7 +40,7 @@
 	{% endif %}
    <div class="grid">
       <div class="col-md-8">
-	  {% if use2013 %}
+	  {% if oldPlayer %}
 	  {{ include('/components/player_2013.twig') }}
 	  {% else %}
 	  {{ include('/components/player.twig') }}
