add edit video shit + fix js

--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -6,6 +6,7 @@
 
 <title>squareBracket - Can't believe it's not PokTube</title>
 <link href="/assets/2008/main.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="assets/2008/js/base.js"></script>
 <style>
 		body { word-break:break-word; }
 		</style>
