--- a/templates/2008/user.twig
+++ b/templates/2008/user.twig
@@ -521,7 +521,7 @@
                <span class="smallText">Website:</span> <strong><a href="http://www.buckhollywood.com" name="&amp;lid=ProfileWebsiteLink&amp;lpos=Profile" rel="nofollow">http://www.buckhollywood.com</a></strong>
                <br>
             </div>
-            <div class="padT10">
+            <!-- <div class="padT10">
                <table cellspacing="0" cellpadding="0">
                   <tbody>
                      <tr>
@@ -555,7 +555,7 @@
                   </tbody>
                </table>
             </div>
-            <div class="flaggingText"><a href="/flag_user?username={{ userpagedata.name }}&amp;action=report_profile_image" onclick="javascript:getSimpleXR('/flag_user?username={{ userpagedata.name }}&amp;action=report_profile_image&amp;format=xml', showConfMsg, this);return false;">Report</a> profile image violation</div>
+ -->            <div class="flaggingText"><a href="/flag_user?username={{ userpagedata.name }}&amp;action=report_profile_image" onclick="javascript:getSimpleXR('/flag_user?username={{ userpagedata.name }}&amp;action=report_profile_image&amp;format=xml', showConfMsg, this);return false;">Report</a> profile image violation</div>
          </div>
          <div class="box-bg"></div>
       </div>
@@ -1015,7 +1015,7 @@
                            </div>
                            <div style="text-align:left;">
                               <div class="vtitle">
-                                 <a href="/watch?v=EPbnvIosvss">Pull Shapes for the {{ userpagedata.name }} - The Pipettes</a><br>
+                                 <a href="/watch?v=EPbnvIosvss">Pull Shapes for the [username] - The Pipettes</a><br>
                                  <span class="runtime">02:58</span>
                               </div>
                               <div class="vfacets">
